[project]
name = "streamlit-dataframe-summary"
version = "0.1.0"
description = "Streamlit component to summarize a DataFrame"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Arnaud Miribel", email = "arnaudmiribel@gmail.com" }]
dependencies = ["plotly>=5.24.1", "seaborn>=0.13.2", "streamlit>=1.38"]
